[package]
name = "crypto-price"
version = "0.1.0"
edition = "2021"
description = "Cryptocurrency price tracker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1.9", features = ["derive"]}
reqwest = { version= "0.11.10", features = ["blocking", "json"] }
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
